# Waz

./: .bash_history  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.bash  package.xml  run.bash
Docker/: .bashrc  Dockerfile  build.bash  join.bash  run.bash
cmake/: Findglog.cmake
config/: camera.yaml  cost_map.json  depth_anything.json  networks.json  robot.json  segformer.json  semantic_labels.json
docker/: Dockerfile  run.bash
include/: .bash_history
include/waz/: class_matrix.hpp  cost_map.hpp  depth.hpp  max.hpp  model.hpp  network_manager.hpp  normalize.hpp  params.hpp  planner.hpp  resize.hpp  search.hpp  semantics.hpp  velocity.hpp  waz.hpp
include/waz/api/: astar.hpp  cost_map.hpp  depth.hpp  network_manager.hpp  semantics.hpp  velocity.hpp  waz.hpp
include/waz/ros/: wazros.hpp
include/waz/utils/: average.hpp  interpolate.hpp  label_map.hpp  mode.hpp  normalize.hpp  params.hpp  search.hpp
launch/: wazros.launch
lib/: bfs.py  cost_map.py  depth_cost_map.py  obstacle_detection.py  semantics.py
models/: jit_convert.py  jit_convert_tranformers.py
notebooks/: depth_analysis.ipynb  depth_analysis_v2.ipynb  segmentation-test.ipynb
ros/: wazros.cpp  wazros_node.cpp
ros/include/waz/: wazros.hpp
ros/src/: wazros.cpp  wazros_node.cpp
scripts/: bfs.py  cost_map.py  plan.py
src/: astar.cpp  cost_map.cpp  depth.cpp  network_manager.cpp  params.cpp  search.cpp  semantics.cpp  velocity.cpp  velocity.hpp  waz.cpp
src/waz/: depth_wrapper.py  segmentation_wrapper.py  wrapper_test.py
test/: cost_map_test.py  models.cpp  models.py  validate_depth.py
test/cpp/: cost_map_test.cpp  depth_model.cpp  models.cpp  preprocess.cpp  semantics_model.cpp  waz_test.cpp
test/python/: validate_semantics.py
utils/: average.cpp  class_matrix.cpp  interpolate.cpp  label_map.cpp  max.cpp  mode.cpp  normalize.cpp  params.cpp  resize.cpp
